globex-skupper-common/templates/skupper-network-observer-openshift-2.0.1-rh.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: skupper-network-observer-tls
  labels:
    app.kubernetes.io/instance: skupper-network-observer
    app.kubernetes.io/name: network-observer
    app.kubernetes.io/part-of: skupper-network-observer
    app.kubernetes.io/version: 2.0.1
  name: skupper-network-observer
  namespace: openshift-operators
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    app.kubernetes.io/instance: skupper-network-observer
    app.kubernetes.io/name: network-observer
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: skupper-network-observer
    app.kubernetes.io/name: network-observer
    app.kubernetes.io/part-of: skupper-network-observer
    app.kubernetes.io/version: 2.0.1
  name: skupper-network-observer
  namespace: openshift-operators
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: skupper-network-observer
      app.kubernetes.io/name: network-observer
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: skupper-network-observer
        app.kubernetes.io/name: network-observer
        app.kubernetes.io/part-of: skupper-network-observer
        app.kubernetes.io/version: 2.0.1
    spec:
      containers:
      - args:
        - -listen=127.0.0.1:8080
        - -prometheus-api=http://127.0.0.1:9090
        - -router-endpoint=amqps://skupper-router-local
        - -router-tls-ca=/etc/messaging/ca.crt
        - -router-tls-cert=/etc/messaging/tls.crt
        - -router-tls-key=/etc/messaging/tls.key
        image: registry.redhat.io/service-interconnect/skupper-network-observer-rhel9@sha256:498b5bb648e5bbaad07663941600173abac7d60a10744305f619509ddf7563e0
        imagePullPolicy: Always
        name: network-observer
        ports:
        - containerPort: 8080
          name: api
          protocol: TCP
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        volumeMounts:
        - mountPath: /etc/messaging/
          name: skupper-management-client
      - args:
        - --config.file=/etc/prometheus/prometheus.yml
        - --storage.tsdb.path=/prometheus/
        image: registry.redhat.io/openshift4/ose-prometheus-rhel9@sha256:bd3f72544841c91c2d573a65ac3c988756f3523e17e0988027793b0f5f3ec3d1
        imagePullPolicy: IfNotPresent
        name: prometheus
        ports:
        - containerPort: 9090
          name: prom
          protocol: TCP
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        volumeMounts:
        - mountPath: /etc/prometheus
          name: prometheus-config
        - mountPath: /prometheus
          name: prometheus-storage-volume
      - args:
        - --https-address=:8443
        - --provider=openshift
        - --openshift-service-account=skupper-network-observer
        - --upstream=http://127.0.0.1:8080
        - -tls-cert=/etc/certificates/tls.crt
        - -tls-key=/etc/certificates/tls.key
        - -cookie-secret-file=/etc/session-secrets/secret
        image: registry.redhat.io/openshift4/ose-oauth-proxy-rhel9@sha256:92f44cff160874efe57a985609e599b13c49c0c4cef846dccc80833af2ae74f3
        imagePullPolicy: IfNotPresent
        name: proxy
        ports:
        - containerPort: 8443
          name: https
          protocol: TCP
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        volumeMounts:
        - mountPath: /etc/certificates/
          name: skupper-network-observer-tls
        - mountPath: /etc/session-secrets/
          name: session-cookie-secret
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: skupper-network-observer
      volumes:
      - configMap:
          defaultMode: 420
          name: skupper-network-observer-prometheus
        name: prometheus-config
      - emptyDir: {}
        name: prometheus-storage-volume
      - name: skupper-management-client
        secret:
          defaultMode: 420
          secretName: skupper-network-observer-client
      - name: skupper-network-observer-tls
        secret:
          defaultMode: 420
          secretName: skupper-network-observer-tls
      - name: session-cookie-secret
        secret:
          defaultMode: 420
          secretName: skupper-network-observer-session
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/instance: skupper-network-observer
    app.kubernetes.io/name: network-observer
    app.kubernetes.io/part-of: skupper-network-observer
    app.kubernetes.io/version: 2.0.1
  name: skupper-network-observer
  namespace: openshift-operators
spec:
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: skupper-network-observer
    weight: 100
